[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.1" }

[dev-dependencies]
anyhow = { version = "1" }
httpc-test = { version = "0.1.1" } # uses reqwest & cookie store
