[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7.1" }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = { version = "0.10" }

[dev-dependencies]
anyhow = { version = "1" }
httpc-test = { version = "0.1.1" } # uses reqwest & cookie store
